--- a/requirements-freeze.txt
+++ b/requirements-freeze.txt
@@ -1,22 +1,3 @@
-wheel==0.37.1
-setuptools==62.1.0
-
-Flask==2.2.3
-requests==2.28.2
-gunicorn==20.1.0
-Flask-SQLAlchemy==3.0.3
-Flask-WTF==1.1.1
-Flask-Login==0.6.2
-Flask-Migrate==4.0.4
-Flask-Mail==0.9.1
-WTForms==3.0.1
-stripe==5.4.0
-vcrpy==4.2.1
-pytest==7.2.2
-pytest-flask==1.2.0
-pytest-cov==4.0.0
-flake8==6.0.0
-## The following requirements were added by pip freeze:
 alembic==1.10.3
 attrs==22.2.0
 blinker==1.6
@@ -25,14 +6,25 @@ charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
 coverage==7.2.2
+cssmin==0.2.0
 dnspython==2.3.0
 email-validator==1.3.1
 exceptiongroup==1.1.1
+flake8==6.0.0
+Flask==2.2.3
+Flask-Assets==2.0
+Flask-Login==0.6.2
+Flask-Mail==0.9.1
+Flask-Migrate==4.0.4
+Flask-SQLAlchemy==3.0.3
+Flask-WTF==1.1.1
 greenlet==2.0.2
+gunicorn==20.1.0
 idna==3.4
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsmin==3.0.1
 Mako==1.2.4
 MarkupSafe==2.1.2
 mccabe==0.7.0
@@ -41,12 +33,20 @@ packaging==23.0
 pluggy==1.0.0
 pycodestyle==2.10.0
 pyflakes==3.0.1
+pytest==7.2.2
+pytest-cov==4.0.0
+pytest-flask==1.2.0
 PyYAML==6.0
+requests==2.28.2
 six==1.16.0
 SQLAlchemy==2.0.9
+stripe==5.4.0
 tomli==2.0.1
 typing_extensions==4.5.0
 urllib3==1.26.15
+vcrpy==4.2.1
+webassets==2.0
 Werkzeug==2.2.3
 wrapt==1.15.0
+WTForms==3.0.1
 yarl==1.8.2
