--- a/requirements-freeze.txt
+++ b/requirements-freeze.txt
@@ -38,6 +38,7 @@ pytest-cov==4.0.0
 pytest-flask==1.2.0
 PyYAML==6.0
 requests==2.28.2
+sentry-sdk==1.19.1
 six==1.16.0
 SQLAlchemy==2.0.9
 stripe==5.4.0
