--- a/requirements-freeze.txt
+++ b/requirements-freeze.txt
@@ -1,11 +1,18 @@
 alembic==1.10.3
-attrs==22.2.0
-blinker==1.6
+amqp==5.1.1
+arrow==1.2.3
+async-timeout==4.0.2
+billiard==3.6.4.0
+blinker==1.6.1
+celery==5.2.7
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
-colorama==0.4.6
-coverage==7.2.2
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+coverage==7.2.3
+crontab==1.0.1
 cssmin==0.2.0
 dnspython==2.3.0
 email-validator==1.3.1
@@ -16,38 +23,53 @@ Flask-Assets==2.0
 Flask-Login==0.6.2
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.4
+Flask-RQ2==18.3
 Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.1.1
+freezegun==1.2.2
 greenlet==2.0.2
 gunicorn==20.1.0
 idna==3.4
+importlib-metadata==6.2.1
+importlib-resources==5.12.0
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsmin==3.0.1
+kombu==5.2.4
 Mako==1.2.4
 MarkupSafe==2.1.2
 mccabe==0.7.0
 multidict==6.0.4
 packaging==23.0
 pluggy==1.0.0
+prompt-toolkit==3.0.38
 pycodestyle==2.10.0
 pyflakes==3.0.1
-pytest==7.2.2
+pytest==7.3.0
 pytest-cov==4.0.0
 pytest-flask==1.2.0
+python-dateutil==2.8.2
+pytz==2023.3
 PyYAML==6.0
+redis==4.5.4
 requests==2.28.2
+rq==1.8.1
+rq-dashboard==0.6.1
+rq-scheduler==0.13.0
 sentry-sdk==1.19.1
 six==1.16.0
 SQLAlchemy==2.0.9
 stripe==5.4.0
 tomli==2.0.1
-typing_extensions==4.5.0
+typing-extensions==4.5.0
 urllib3==1.26.15
 vcrpy==4.2.1
+vine==5.0.0
+wcwidth==0.2.6
 webassets==2.0
 Werkzeug==2.2.3
 wrapt==1.15.0
 WTForms==3.0.1
 yarl==1.8.2
+zipp==3.15.0
