--- a/requirements-freeze.txt
+++ b/requirements-freeze.txt
@@ -1,25 +1,23 @@
 alembic==1.10.3
-amqp==5.1.1
 arrow==1.2.3
 async-timeout==4.0.2
-billiard==3.6.4.0
 blinker==1.6.1
-celery==5.2.7
+cachelib==0.9.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.2.0
 coverage==7.2.3
 crontab==1.0.1
 cssmin==0.2.0
 dnspython==2.3.0
 email-validator==1.3.1
 exceptiongroup==1.1.1
+fakeredis==2.10.3
 flake8==6.0.0
 Flask==2.2.3
 Flask-Assets==2.0
+Flask-Caching==2.0.2
+Flask-DebugToolbar==0.13.1
 Flask-Login==0.6.2
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.4
@@ -36,21 +34,18 @@ iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsmin==3.0.1
-kombu==5.2.4
 Mako==1.2.4
 MarkupSafe==2.1.2
 mccabe==0.7.0
 multidict==6.0.4
 packaging==23.0
 pluggy==1.0.0
-prompt-toolkit==3.0.38
 pycodestyle==2.10.0
 pyflakes==3.0.1
 pytest==7.3.0
 pytest-cov==4.0.0
 pytest-flask==1.2.0
 python-dateutil==2.8.2
-pytz==2023.3
 PyYAML==6.0
 redis==4.5.4
 requests==2.28.2
@@ -59,14 +54,13 @@ rq-dashboard==0.6.1
 rq-scheduler==0.13.0
 sentry-sdk==1.19.1
 six==1.16.0
+sortedcontainers==2.4.0
 SQLAlchemy==2.0.9
 stripe==5.4.0
 tomli==2.0.1
 typing-extensions==4.5.0
 urllib3==1.26.15
 vcrpy==4.2.1
-vine==5.0.0
-wcwidth==0.2.6
 webassets==2.0
 Werkzeug==2.2.3
 wrapt==1.15.0
