--- a/requirements.txt
+++ b/requirements.txt
@@ -15,13 +15,15 @@ wtforms[email]
 Flask-assets
 cssmin
 jsmin
+fakeredis
+
+Flask-debugtoolbar
+flask-caching
 
 sentry-sdk[flask]
 
 Flask-RQ2
 rq-dashboard
-celery==5.2.7
-click==8.1.3
 rq==1.8.1
 
 stripe
