--- a/requirements-freeze.txt
+++ b/requirements-freeze.txt
@@ -1,6 +1,9 @@
 alembic==1.10.3
 arrow==1.2.3
 async-timeout==4.0.2
+attrs==22.2.0
+autoflake==2.0.2
+autopep8==2.0.2
 blinker==1.6.1
 cachelib==0.9.0
 certifi==2022.12.7
@@ -13,6 +16,7 @@ dnspython==2.3.0
 email-validator==1.3.1
 exceptiongroup==1.1.1
 fakeredis==2.10.3
+filelock==3.11.0
 flake8==6.0.0
 Flask==2.2.3
 Flask-Assets==2.0
@@ -38,13 +42,20 @@ Mako==1.2.4
 MarkupSafe==2.1.2
 mccabe==0.7.0
 multidict==6.0.4
+mypy==1.2.0
+mypy-extensions==1.0.0
 packaging==23.0
 pluggy==1.0.0
+py==1.11.0
 pycodestyle==2.10.0
 pyflakes==3.0.1
 pytest==7.3.0
 pytest-cov==4.0.0
+pytest-flake8==1.1.1
 pytest-flask==1.2.0
+pytest-html==3.2.0
+pytest-metadata==2.0.4
+pytest-mypy==0.10.3
 python-dateutil==2.8.2
 PyYAML==6.0
 redis==4.5.4
